[package]
name = "fastboot"
version = "1.3.0"
edition = "2021"

[lib]
name = "version"          # output = version.dll  (proxy drop-in)
crate-type = ["cdylib"]

[dependencies]
retour = "0.3"            # inline (trampoline) hooks

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
